corrected a clipping issue in chrome at smallest width

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
  @import url('https://fonts.googleapis.com/css?family=Pangolin'); html,
  body {
      height: 100%;
+     min-width: 300px;
  }
  
  #pageContainer {
